# alamo-benchmarking

./: .gitignore  .gitmodules  CLAUDE.md  README.md  SETUP.md  pyproject.toml
benchmarks/: __init__.py  __main__.py  cli.py  config.py  platform_info.py  preflight.py  topology.py
benchmarks/report/: __init__.py  data.py  discover.py  geekbench.py  geekbench.toml  plots.py  render.py  stats.py
benchmarks/report/templates/: report.html.j2
benchmarks/runners/: __init__.py  base.py  compile_runner.py  noise_floor.py  regression.py  render.py  scp_elastic.py
benchmarks/storage/: __init__.py  schema.py  writer.py
benchmarks/telemetry/: __init__.py  base.py  linux.py  macos.py  sudo.py
configs/: default.toml  quick.toml  regression_only.toml  validate.toml
results/jenna_m5-pro/run_2026-05-20T01-51-51.059026Z/: run_2026-05-20T01-51-51.059026Z.db  run_2026-05-20T01-51-51.059026Z.manifest.json
results/jenna_m5-pro/run_2026-05-20T02-29-12.886281Z/: run_2026-05-20T02-29-12.886281Z.db
results/jenna_m5-pro/run_2026-05-20T02-29-50.221141Z/: run_2026-05-20T02-29-50.221141Z.db  run_2026-05-20T02-29-50.221141Z.manifest.json
results/kermit_xeon-w5-2545/run_2026-05-19T22-22-39.861265Z/: run_2026-05-19T22-22-39.861265Z.db  run_2026-05-19T22-22-39.861265Z.manifest.json
results/kermit_xeon-w5-2545/run_2026-05-19T22-45-45.329738Z/: run_2026-05-19T22-45-45.329738Z.db  run_2026-05-19T22-45-45.329738Z.manifest.json
results/lucy_m4-pro/run_2026-05-20T01-51-48.400641Z/: run_2026-05-20T01-51-48.400641Z.db  run_2026-05-20T01-51-48.400641Z.manifest.json
results/lucy_m4-pro/run_2026-05-20T02-06-14.155303Z/: run_2026-05-20T02-06-14.155303Z.db  run_2026-05-20T02-06-14.155303Z.manifest.json
results/lucy_m4-pro/run_2026-05-20T02-58-12.849039Z/: run_2026-05-20T02-58-12.849039Z.db  run_2026-05-20T02-58-12.849039Z.manifest.json
results/matthew_m1-pro/run_2026-05-20T02-56-31.219287Z/: run_2026-05-20T02-56-31.219287Z.db
results/matthew_m1-pro/run_2026-05-20T02-58-26.890014Z/: run_2026-05-20T02-58-26.890014Z.db
results/matthew_m1-pro/run_2026-05-20T02-59-20.165797Z/: run_2026-05-20T02-59-20.165797Z.db  run_2026-05-20T02-59-20.165797Z.manifest.json
results/matthew_m1-pro/run_2026-05-20T03-11-24.877022Z/: run_2026-05-20T03-11-24.877022Z.db  run_2026-05-20T03-11-24.877022Z.manifest.json
results/pepe_intel-w-1370/run_2026-05-19T22-57-53.267852Z/: run_2026-05-19T22-57-53.267852Z.db  run_2026-05-19T22-57-53.267852Z.manifest.json
scripts/: scrape_geekbench.py
tests/: test_mpi_affinity.py  test_order_specs.py  test_platform_info.py  test_preflight_rapl.py  test_regression_skip.py  test_render.py  test_report.py  test_telemetry_linux.py  test_telemetry_macos.py  test_topology.py
tests/fixtures/: powermetrics_macos_m1pro.plist  powermetrics_macos_m4pro.plist  powermetrics_macos_m5pro.plist  turbostat_linux_xeon-e3-1240v6.txt  turbostat_linux_xeon-w-1370.txt  turbostat_linux_xeon-w5-2545.txt
(+4 files in other folders)
